--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Plus+Jakarta+Sans:wght@500&display=swap" rel="stylesheet">
     <title>Frontend Mentor | Notifications page</title>
     <style>
-        .attribution { font-size: 11px; text-align: center; }
+        .attribution { font-size: .8rem; text-align: center; color: black; }
         .attribution a { color: hsl(228, 45%, 44%); }
     </style>
 </head>
